Fix pre rule dark mode styling (#951)

--- a/src/scss/_dark.scss
+++ b/src/scss/_dark.scss
@@ -6,6 +6,11 @@
     background-color: $dark-mode-darken;
   }
 
+  pre {
+    background-color: $dark-mode-darken;
+    border-color: $dark-mode-lighten-10;
+  }
+
   .text-body {
     color: $dark-mode-text!important;
   }
