--- a/src/scss/demo/_examples.scss
+++ b/src/scss/demo/_examples.scss
@@ -79,8 +79,17 @@
 }
 
 @include dark-mode {
+  .example {
+    background-color: $dark-mode-darken;
+    border-color: $dark-mode-lighten-10;
+  }
+
+  .example-content {
+    color: $dark-mode-text;
+  }
+
   .example-code {
-    border: 1px solid $border-color;
+    border-color: $dark-mode-lighten-10;
     border-top: none;
   }
 }
